feat:add some more sections layout like about and portfolio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-website</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/d980054509.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -100,8 +101,47 @@
             </div>
         </div>
     </div>
-
     </div>
+    <!-- -----------Services---------- -->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>MERN Developer</h2>
+                    <p>MERN Stack Developer skilled in building scalable, full-stack web applications using MongoDB, Express.js, React, and Node.js with a focus on performance and clean architecture.</p>
+                    <a href="#">learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-database"></i>
+                    <h2>Backend Developer</h2>
+                    <p>
+                        Backend Developer experienced in building secure and efficient server-side applications, RESTful APIs, and database integration using Node.js and MongoDB.
+                    </p>
+                    <a href="#">Learn more</a>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-crop"></i>
+                    <h2>UI/UX Designer</h2>
+                    <p>
+                        UI/UX Designer focused on creating intuitive, user-centric web and app interfaces with strong attention to usability, accessibility, and visual design.
+                    </p>
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -------------Portfolio---------------- -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My work</h1>
+        </div>
+    </div>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
