--- a/index.html
+++ b/index.html
@@ -13,51 +13,53 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="#" alt="Logo" class="logo">
-                <ul>
+                <img src="#" alt=" Logo " class="logo ">
+                <ul id="sidemenu">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="# ">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="# ">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="# ">Services</a>
                     </li>
                     <li>
-                        <a href="#">Portfolio</a>
+                        <a href="# ">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="# ">Contact</a>
                     </li>
+                    <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
-            <div class="header-text">
+            <div class="header-text ">
                 <p>MERN Developer</p>
                 <h1>Hi, I'm <span>Aditya</span> <br>Verma from Delhi</h1>
             </div>
         </div>
     </div>
     <!-- -----------About---------- -->
-    <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="./images/profile.png" alt="profile">
+    <div id="about ">
+        <div class="container ">
+            <div class="row ">
+                <div class="about-col-1 ">
+                    <img src="./images/portfolio.png " alt="profile ">
                 </div>
 
-                <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
+                <div class="about-col-2 ">
+                    <h1 class="sub-title ">About Me</h1>
                     <p>
                         I am a dedicated Web Developer skilled in HTML, CSS, JavaScript, and basic React. I focus on building clean, responsive, and visually appealing user interfaces. I love turning ideas into real-world web applications and constantly improving my coding and
                         problem-solving skills.
                     </p>
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    <div class="tab-titles ">
+                        <p class="tab-links active-link " onclick="opentab( 'skills') ">Skills</p>
+                        <p class="tab-links " onclick="opentab( 'experience') ">Experience</p>
+                        <p class="tab-links " onclick="opentab( 'education') ">Education</p>
                     </div>
-                    <div class="tab-contents active-tab" id="skills">
+                    <div class="tab-contents active-tab " id="skills ">
                         <ul>
                             <li><span>Ui/Ux</span><br>Designing Web/App interfaces</li>
                             <li>
@@ -68,7 +70,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="experience">
+                    <div class="tab-contents " id="experience ">
                         <ul>
                             <li>
                                 <span>MERN Stack Intern</span><br> Worked as a MERN Stack Intern at CETPA Info Tech for 6 months, gaining hands-on experience in developing full-stack web applications using MongoDB, Express.js, React, and Node.js.
@@ -79,7 +81,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="education">
+                    <div class="tab-contents " id="education ">
                         <ul>
                             <li>
                                 <span>B.Tech (Computer Science)</span><br> Dr. A.P.J. Abdul Kalam Technical University (AKTU), 2025 Pass Out
@@ -103,45 +105,103 @@
     </div>
     </div>
     <!-- -----------Services---------- -->
-    <div id="services">
-        <div class="container">
-            <h1 class="sub-title">My Services</h1>
-            <div class="services-list">
+    <div id="services ">
+        <div class="container ">
+            <h1 class="sub-title ">My Services</h1>
+            <div class="services-list ">
                 <div>
-                    <i class="fa-solid fa-code"></i>
+                    <i class="fa-solid fa-code "></i>
                     <h2>MERN Developer</h2>
                     <p>MERN Stack Developer skilled in building scalable, full-stack web applications using MongoDB, Express.js, React, and Node.js with a focus on performance and clean architecture.</p>
-                    <a href="#">learn more</a>
+                    <a href="# ">learn more</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-database"></i>
+                    <i class="fa-solid fa-database "></i>
                     <h2>Backend Developer</h2>
                     <p>
                         Backend Developer experienced in building secure and efficient server-side applications, RESTful APIs, and database integration using Node.js and MongoDB.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="# ">Learn more</a>
                 </div>
 
                 <div>
-                    <i class="fa-solid fa-crop"></i>
+                    <i class="fa-solid fa-crop "></i>
                     <h2>UI/UX Designer</h2>
                     <p>
                         UI/UX Designer focused on creating intuitive, user-centric web and app interfaces with strong attention to usability, accessibility, and visual design.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="# ">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- -------------Portfolio---------------- -->
-    <div id="portfolio">
-        <div class="container">
-            <h1 class="sub-title">My work</h1>
+    <div id="portfolio ">
+        <div class="container ">
+            <h1 class="sub-title ">My work</h1>
+            <div class="work-list ">
+                <div class="work ">
+                    <img src="./images/profile.png " alt=" ">
+                    <div class="layer ">
+                        <h3>Travel website</h3>
+                        <p>This Website experiences you the places which are really cool for visiting.</p>
+                        <a href="# "><i class="fa-solid fa-arrow-up-right-from-square "></i></a>
+                    </div>
+                </div>
+                <div class="work ">
+                    <img src="./images/profile.png " alt=" ">
+                    <div class="layer ">
+                        <h3>Travel website</h3>
+                        <p>This Website experiences you the places which are really cool for visiting.</p>
+                        <a href="# "><i class="fa-solid fa-arrow-up-right-from-square "></i></a>
+                    </div>
+                </div>
+                <div class="work ">
+                    <img src="./images/profile.png " alt=" ">
+                    <div class="layer ">
+                        <h3>Travel website</h3>
+                        <p>This Website experiences you the places which are really cool for visiting.</p>
+                        <a href="# "><i class="fa-solid fa-arrow-up-right-from-square "></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="# " class="btn ">See more</a>
         </div>
     </div>
-
-
-    <script src="./script.js"></script>
+    <!-- ----------contact-form------------- -->
+    <div id="contact ">
+        <div class="container ">
+            <div class="row ">
+                <div class="contact-left ">
+                    <h1 class="sub-title ">Contact Me</h1>
+                    <p><i class="fa-solid fa-at "></i>adityafriendrahul@gmail.com</p>
+                    <p><i class="fa-solid fa-phone "></i>+91-7379851567</p>
+                    <div class="social-icons ">
+                        <a href="# "><i class="fa-brands fa-facebook "></i></a>
+                        <a href="# "><i class="fa-brands fa-twitter "></i></a>
+                        <a href="# "><i class="fa-brands fa-instagram "></i></a>
+                        <a href="# "><i class="fa-brands fa-linkedin "></i></a>
+                        <a href="# "><i class="fa-brands fa-github "></i></a>
+                    </div>
+                    <a href="./images/profile.png " download class="btn btn2 ">Download CV</a>
+                </div>
+                <div class="contact-right ">
+                    <form> <input type="text " name="name " placeholder="Your Name " required>
+                        <input type="email " name="email " placeholder="Your E-mail " required>
+                        <textarea name="Message " row="6 " placeholder="Your Message "></textarea>
+                        <button type="submit " class="btn btn2 ">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright ">
+            <p>Copyright © 2026 Aditya Verma. Designed & Developed with ❤️
+            </p>
+        </div>
+    </div>
+    <script src="./script.js "></script>
 </body>
+
+</html>
 
 </html>
