feat:provided some links

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                 <div class="work">
                     <img src="./images/profile.png" alt="">
                     <div class="layer">
-                        <h3>Travel Website</h3>
-                        <p>This website experiences you the places which are really cool for visiting.</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Mordern Chair</h3>
+                        <p>This website experiences you the color changing chair feels smoothly which are looking really cool for.</p>
+                        <a href="colorchanging-chair.netlify.app"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
 
@@ -179,9 +179,9 @@
                     <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/mai___aadiiiii?igsh=MTVmNDBiMDY2ZXp5cA=="><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/aditya-verma0/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/AdityaVermaeng"><i class="fa-brands fa-github"></i></a>
                     </div>
 
                     <a href="./images/profile.png" download class="btn btn2">Download CV</a>
