--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <a href="https://github.com/AdityaVermaeng"><i class="fa-brands fa-github"></i></a>
                     </div>
 
-                    <a href="./images/profile.png" download class="btn btn2">Download CV</a>
+                    <a href="./AdityaVerma@.pdf" download class="btn btn2">Download CV</a>
                 </div>
 
                 <div class="contact-right">
